2006-09-20 Joerg Wunsch <j@uriah.heep.sax.de>

	Add the "stk500generic" programmer that auto-probes for STK500
	either firmware version 1 or 2.
	* Makefile.am (avrdude_SOURCES): add the new files
	stk500generic.c and stk500generic.h.
	* avrdude.conf.in: Add the stk500generic programmer type, and
	change the "stk500" entry to point to this programmer.
	* config_gram.y: Add the stk500generic keyword.
	* lexer.l: (Ditto.)
	* stk500.c: Change the stk500v1 code to not call exit()
	prematurely when failing to open the programmer, but instead
	return an error status.
	* stk500generic.c: (New file.) Stub programmer implementation.
	Probe for either stk500v1 or stk500v2, and adjust the current pgm
	appropriately.
	* stk500generic.h: (New file.) Declare the public interface(s)
	of stk500generic.c.
	* doc/avrdude.texi: Document the changed behaviour of stk500.

2006-09-18 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Various fixes for ancient processors and their
	capabilities.  For the AT90S1200 and the AT90S8515, fuse bit
	handling via ISP, and lock bit reading via ISP are not supported
	at all.  For the AT90S4414 (small brother of the AT90S8515), add
	the ability to write the lock bits, and add a definition for the
	fuse bits (usable for HV programming).  For the AT90S2313, add the
	"fuse" memory range, so it's available for HV programming.

	Resolves bug #17796: avrdude will not program or verify lockbits
	with Atmel STK protocol programmers

2006-09-17 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Thomas Fischl:
	* usbasp.c: Check for USBasp with new as well as old VID/PID
	pair, warn the user about upgrading the firmware in case an
	old one has been found.
	* usbasp.h: Add new VID/PID.

2006-09-15 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix some mistakes for the ATtinyX61 family:
	. high fuse has 8 bits
	. there is an extended fuse (just one bit)
	. the calibration area is only 1 byte

2006-09-12 Joerg Wunsch <j@uriah.heep.sax.de>
